--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,26 @@
+/*
+
+box model reset - border box everywhere
+
+this makes it much easier to mix paddings/margin and
+grid classes
+
+*/
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
 /* source display should span whole window height */
 html, body, #main, #bonsai-main {
   min-height: 100%;
-  height: 100%;
 }
 
 #source {
   min-height: 100%;
-  height: 100%;
   color: #eee;
   background-color: #333;
 }
